# enterprise-rag

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CODEX_START_PROMPT.md  Dockerfile  LICENSE  README.md  SPEC.md  THIRD_PARTY_NOTICES.md  THIRD_PARTY_SOURCE_OFFER.md  acceptance.json  docker-compose.yml  pyproject.toml  spec.json  tasks.json  updater.py  windows_launcher.py
docs/: DEPLOYMENT.zh-CN.md  INSTALL_WINDOWS.zh-CN.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.2.1.md  RELEASE_NOTES_v0.2.2.md  RELEASE_NOTES_v0.2.3.md  RELEASE_NOTES_v0.3.0.md  REPOSITORY_CONTENTS.zh-CN.md  T08_EVALUATION.md  TECHNICAL_GUIDE.zh-CN.md  UPDATES.zh-CN.md  WINDOWS_APP_PACKAGING.zh-CN.md
evaluation/: README.md  __init__.py  adapters.py  audit_dataset_leakage.py  build_dataset.py  build_gold_benchmark.py  build_keyterm_benchmark.py  build_low_overlap_benchmark.py  build_no_leak_benchmark.py  dataset.schema.json  metrics.py  run_all.py  run_generation_eval.py  run_incremental_eval.py  run_ingestion_eval.py  run_performance_eval.py  run_retrieval_eval.py  run_stability_eval.py
packaging/windows/: QUICK_START.txt  build_windows.ps1  portable.mode  使用说明.txt
scripts/: backup.py  benchmark.py  prepare_offline_assets.py  prepare_online_assets.py  reembed_active.py  repair_check.py
src/enterprise_document_rag/: __init__.py  chunking.py  config.py  db.py  embeddings.py  fingerprinting.py  indexing.py  main.py  model_manager.py  ocr.py  operations.py  parsing.py  preview.py  qa.py  repositories.py  reranking.py  resource_control.py  retrieval.py  scanner.py  security.py  text_utils.py  updates.py  vector_store.py  vision.py  worker.py
src/enterprise_document_rag/static/: index.html
tests/: test_evaluation_metrics.py  test_health.py  test_indexing.py  test_metadata_jobs.py  test_operations_api.py  test_parsing_chunking.py  test_preview.py  test_retrieval_qa.py  test_scanner.py
