[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-document-local-rag-agent"
version = "0.1.0"
description = "Local-first enterprise document retrieval and cited QA MVP."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115,<1.0",
    "openpyxl>=3.1,<4.0",
    "pymupdf>=1.24,<2.0",
    "python-docx>=1.1,<2.0",
    "pydantic-settings>=2.0,<3.0",
    "qdrant-client>=1.9,<2.0",
    "rapidocr-onnxruntime>=1.4,<2.0",
    "sentence-transformers>=5.0,<6.0",
    "psutil>=7.0,<8.0",
    "uvicorn[standard]>=0.30,<1.0",
    "xlrd>=2.0,<3.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
enterprise_document_rag = ["static/*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<9.0",
    "ruff>=0.6,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
